--- a/Main_Spine/c5.tex
+++ b/Main_Spine/c5.tex
@@ -1,72 +1,27 @@
 % !TeX root = ../main.tex
 
-\xchapter{非正文部分的要求}{Requirements of other parts}
+\xchapter{总结与展望}{Conclusions and Future Work}
 
-\xsection{摘要}{Abstracts}
+\xsection{论文工作总结}{Conclusions}
 
-\begin{tcolorbox}[colback=blue!5!white,colframe=blue!75!black,title=摘要内容要求]
-  内容一般包括：从事这项研究工作的目的和意义；完成的工作（作者独立进行的研究工作及相应结果的概括性叙述）；获得的主要结论（这是摘要的中心内容）。博士学位论文摘要应突出论文的创新点，硕士学位论文摘要应突出论文的新见解。
-\end{tcolorbox}
+本文研究无损网络中的净空缓存管理策略，针对无损网络转发设备的不同缓存架构，分别展开片上缓存系统和异构缓存系统的净空缓存管理机制的研究和实现。针对SIH存在的净空缓存挤压共享缓存空间和PFC频繁触发问题，本文设计了面向片上缓存系统的动态共享净空缓存管理机制DSH；针对H-SIH存在的突发吸纳受限于片外带宽、全局流控损害吞吐和长距离传输丢包问题，本文设计了面向异构缓存系统的动态共享净空缓存管理机制。仿真实验结果表明，相对于SIH，DSH可以显著改善流量传输性能，同时有效减少PFC触发，从而避免PFC的网络性能损害；相对于H-SIH，H-DSH可以显著改善流量传输性能，保证流量线速吞吐，同时进一步扩展无损传输距离。
 
-\begin{tcolorbox}[colback=red!5!white,colframe=red!75!black,title=中文摘要主体格式]
-  \begin{enumerate}[leftmargin=0.5cm]
-    \item 论文摘要由摘要正文、关键词、论文类型、资助申明等部分组成。
-    \item 博士学位论文摘要正文为1000字(word)左右，硕士学位论文摘要正文为600字(word)左右。
-    \item 摘要中一般不用图、表、化学结构式、非公知公用的符号和术语。
-    \item 如果论文的主体工作得到了有关基金资助，应在摘要第一页的页脚处标注：本研究得到某某基金（编号：）资助。（五号）
-  \end{enumerate}
-\end{tcolorbox}
+本文的主要工作总结为以下三个方面：
 
-\begin{tcolorbox}[colback=red!5!white,colframe=red!75!black,title=英文摘要主体格式]
-  \begin{enumerate}[leftmargin=0.5cm]
-    \item 用词准确，符合语法；
-    \item 关键词按相应专业的标准术语写出，尽量从《英语主题词表》中摘选；
-    \item 如果论文的主体工作得到了有关基金资助，应用英文在摘要第一页的页脚处标注：本研究得到某某基金（编号：）资助；
-    \item 中文摘要和英文摘要均不要求学位申请人及其指导教师签字。
-    \item 摘要正文每段开头不空格，每段之间空一行；
-  \end{enumerate}
-\end{tcolorbox}
+1）详细研究了片上缓存系统和异构缓存系统架构和物理特性，着重分析了无损网络现有的净空缓存管理机制的工作机制及其在数据中心网络带宽增加和业务服务需求提高趋势下的性能问题。详细调研了国内外学术界和工业界对于无损传输相关问题的研究现状，将现有解决方案分为端到端拥塞控制方案、缓存管理方案和PFC损害消除方案，并分析了各方案的局限性。
 
-\begin{tcolorbox}[colback=blue!5!white,colframe=blue!75!black,title=关键词要求]
-  关键词由3～5个组成。关键词应从《汉语主题词表》中摘选，当《汉语主题词表》的词不足以反映主题时，可由申请人设计关键词，但须加注。每一关键词之间用分号分开，最后一个关键词后不打标点符号。由申请人设计的关键词，须在该关键词的右上角标注*，并在该页的页脚处注明“*表示非汉语主题词”。
-\end{tcolorbox}
+2）针对片上缓存系统现有净空缓存管理机制SIH存在的净空缓存挤压共享缓存空间和PFC频繁触发问题，本文提出了面向片上缓存系统的动态共享净空缓存管理机制DSH。其中，动态性体现在DSH根据队列拥塞状态动态分配净空缓存；共享性体现在保底净空缓存在端口内不同队列之间的共享和共享净空缓存在所有队列之间的共享。为了验证DSH的性能，本文通过ns-3搭建片上缓存系统并实现DSH缓存管理模块。实验结果表明，在大规模网络中，DSH最多可以将长流的流完成时间降低31.1\%，短流的流完成时间降低57.7\%，同时DSH可以有效减少PFC触发，避免PFC造成网络性能损害。
 
-\begin{tcolorbox}[colback=blue!5!white,colframe=blue!75!black,title=论文类型要求]
-  论文类型包括：a.理论研究（Theoretical Research）；b.应用基础(Application Fundamentals)；c.应用研究(Application Research)；d.研究报告(Research Report)；e.设计报告(Design Report)；f.案例分析(Case Study)；g.调研报告(Investigation Report)；h.产品研发(Product Development)；i.工程设计(Engineering Design)；j.工程/项目管理(Engineering/Project Management)；k.其它（Others）。
-\end{tcolorbox}
+3）针对异构缓存系统现有净空缓存管理机制H-SIH存在的突发吸纳受限于片外带宽、全局流控损害吞吐和长距离传输丢包问题，本文提出了面向异构缓存系统的净空缓存管理机制H-DSH。在缓存分配上，H-DSH以片外缓存为中心，将片外缓存作为共享缓存空间，扩展共享缓存容量，同时优先从片外缓存动态分配共享净空缓存，从而缓解片上净空缓存分配压力。在缓存决策上，H-DSH结合流量敏感性特征进行缓存位置决策，充分发挥片上和片外缓存的带宽和容量优势。在流量控制上，H-DSH主动提前触发部分拥塞流量的暂停帧，避免片外带宽瓶颈导致性能受损。本文通过ns-3实现异构缓存系统并实现H-DSH缓存管理模块。实验结果表明，H-DSH可以将片外缓存的突发吸纳量增大3倍，避免流量吞吐受损，最高可以将平均FCT减小14.8\%，同时对无损传输距离提升超过4倍。
 
-\xsection{主要符号表}{Glossary}
+\xsection{未来工作展望}{Future Work}
 
-\begin{tcolorbox}[colback=red!5!white,colframe=red!75!black]
-  \begin{enumerate}[leftmargin=0.5cm]
-    \item 如果论文中使用了大量的物理量符号、标志、缩略词、专门计量单位、自定义名词和术语等，应将全文中常用的这些符号及意义列出。如果上述符号和缩略词使用数量不多，可以不设专门的主要符号表，但在论文中出现时须加以说明。
-    \item 论文中主要符号应全部采用法定单位，特别要严格执行GB3100～3102—93有关“量和单位”的规定。单位名称的书写，可以采用国际通用符号，也可以用中文名称，但全文应统一，不得两种混用。
-    \item 缩略词应列出中英文全称。
-    \item 主要符号表正文统一左缩进一个字符。
-  \end{enumerate}
-\end{tcolorbox}
+本文针对无损网络净空缓存管理效率和性能问题进行研究，设计并实现了面向片上缓存系统的动态共享净空缓存管理机制DSH和面向异构缓存系统的动态共享净空缓存管理机制H-DSH。由于时间和条件限制，本文的研究工作仍然存在改进空间，未来可以从以下方面进一步完善：
 
+1）本文提出的DSH机制通过引入端口级别流量控制减少净空缓存静态预留量，整端口的暂停可能损害队列之间的隔离性，后续工作需要进一步通过理论分析和实验测试验证DSH下的队列隔离性。
 
-\xsection{攻读学位期间取得的研究成果}{Achievements}
+2）本文提出的H-DSH可以将无损传输支持的RTT范围扩展到毫秒级别，但是随着跨数据中心传输距离进一步扩展和分布式应用网络服务需求不断增加，未来长距离链路时延可能增加至几十甚至几百毫秒，H-DSH的净空缓存分配机制需要进一步优化。
 
-\begin{tcolorbox}[colback=red!5!white,colframe=red!75!black]
-  \begin{enumerate}[leftmargin=0.5cm]
-    \item 已发表或已录用的学术论文、已出版的专著/译著、已获授权的专利按参考文献格式列出。
-    \item 科研获奖，列出格式为：获奖人（排名情况）．项目名称．奖项名称及等级，发奖机构，获奖时间．。
-    \item 与学位论文相关的其它成果参照参考文献格式列出。
-    \item 全部研究成果连续编号编排。
-    \item 用于双盲评审的论文，只列出已发表的学术论文的篇名、发表刊物名称，必须隐去各类论文检索号、期号、卷号、页码；专利号；日期等。
-  \end{enumerate}
-\end{tcolorbox}
+3）准确的流量识别可以进一步逼近异构缓存系统缓存管理性能边界，未来可以进一步开展流量识别方面的研究，结合片上缓存和片外缓存物理特性进行流量识别，为缓存决策提供有效信息。
 
-
-
-\xsection{答辩委员会会议决议}{Decisions}
-
-\begin{tcolorbox}[colback=red!5!white,colframe=red!75!black]
-  \begin{enumerate}[leftmargin=0.5cm]
-    \item 填写内容应与学位（毕业）审批材料中答辩委员会决议书一致。
-    \item 无需签名。
-    \item 盲审论文仅保留“答辩委员会会议决议” 标题
-  \end{enumerate}
-\end{tcolorbox}
+4）本文通过ns-3网络仿真平台实现片上缓存系统和异构缓存系统以缓存管理模块，通过仿真实验验证了DSH和H-DSH的性能优势，但是没有在真实硬件设备中进行机制实现和实验测试，未来可以进一步在真实网络环境中验证机制性能。
