--- a/References/achievement.bib
+++ b/References/achievement.bib
@@ -1,51 +1,51 @@
-@ARTICLE{Meyer2000,
-AUTHOR={假名 and Bernd Meyer},
-AUTHOR+an = {1=highlight},
-TITLE={A constraint-based framework for diagrammatic reasoning},
-JOURNAL={Applied Artificial Intelligence},
-VOLUME= {14},
-ISSUE = {4},
-PAGES= {327--344},
-YEAR={2000},
+@inproceedings{shan2023weburst,
+  title={weBurst can be Harmless: Achieving Line-rate Software Traffic Shaping by Inter-flow Batching},
+  author={Shan, Danfeng and Hu, Shihao and Liu, Yuqi and Jiang, Wanchun and Li, Hao and Zhang, Peng and Tang, Yazhe and Wang, Huanzhao and Ren, Fengyuan},
+  booktitle={IEEE INFOCOM 2023-IEEE Conference on Computer Communications},
+  pages={1--10},
+  year={2023},
+  organization={IEEE},
+  NOTE={(CCF A，导师一作，本人三作)}
 }
 
-@ARTICLE{Codishetal2000,
-AUTHOR={M. Codish and K. Marriott and 假名 and C.K. Taboch},
-AUTHOR+an = {3=highlight},
-TITLE={Improving program analyses by structure untupling},
-JOURNAL={Journal of Logic Programming},
-VOLUME= {43},
-ISSUE = {3},
-PAGES= {251--263},
-YEAR={2000},
+@inproceedings{shan2023less,
+  title={Less is More: Dynamic and Shared Headroom Allocation in PFC-Enabled Datacenter Networks},
+  author={Shan, Danfeng and Liu, Yuqi and Zhang, Tong and Liu, Yifan and Tang, Yazhe and Li, Hao and Zhang, Peng},
+  booktitle={2023 IEEE 43rd International Conference on Distributed Computing Systems (ICDCS)},
+  pages={591--602},
+  year={2023},
+  organization={IEEE},
+  NOTE={(CCF B，导师一作，本人二作)}
 }
 
-@inproceedings{Huetal2000,
-author = {J. Hu and 假名 and H.R. Wu and A. Jennings and X. Wang},
-AUTHOR+an = {2=highlight},
-title = {Fast and robust equalization: A case study},
-booktitle = {Proceedings of the World Multiconference on Systemics, Cybernetics and Informatics, (SCI 2000), Florida, USA, 23-26 July 2000},
-publisher = {International Institute of Informatics and Systemics},
-address = {FL, USA},
-pages = {398--403},
-year = {2000},
+@patent{patent2022congestioncontrol,
+  title = {多服务队列环境中基于时延的拥塞控制机制和控制装置},
+  assignee = {西安交通大学},
+  inventors = {单丹枫 and 刘钰琪},
+  type = {发明},
+  number = {申请号：2022104395160},
+  day = {申请日：2022-04-25},
+  note = "(已授权，导师一作，本人二作)"
 }
 
-@Book{Conway2000,
-author = {假名 and Damian Conway},
-AUTHOR+an = {1=highlight},
-title = {Object {O}riented {P}erl: {A} comprehensive guide to concepts and programming techniques},
-publisher = {Manning Publications Co.},
-year = {2000},
-address = {Connecticut, USA},
-KEYWORD = {paper},
+@patent{patent2023dynamicbuffermanagement,
+  title = {一种面向PFC交换机的动态净空缓存管理方法及装置},
+  assignee = {西安交通大学},
+  inventors = {单丹枫 and 刘钰琪},
+  type = {发明},
+  number = {申请号：2023108782453},
+  day = {申请日：2023-07-17},
+  note = "(实质审查，导师一作，本人二作)"
 }
 
-@inproceedings{Zou2013bilingual,
-title={Bilingual Word Embeddings for Phrase-Based Machine Translation.},
-author={Zou, Will Y and Socher, Richard and 假名 and Cer, Daniel M and Manning, Christopher D},
-AUTHOR+an = {3=highlight},
-booktitle={EMNLP},
-pages={1393--1398},
-year={2013},
+@patent{patent2023trafficshape,
+  title = {一种高速低开销流量整形方法及装置},
+  assignee = {西安交通大学},
+  inventors = {单丹枫 and 胡世豪 and 刘钰琪},
+  type = {发明},
+  number = {申请号：2023101793724},
+  day = {申请日：2023-02-28},
+  note = "(实质审查，导师一作，本人二作)"
 }
+
+
