--- a/Main_Miscellaneous/achievement.tex
+++ b/Main_Miscellaneous/achievement.tex
@@ -1,34 +1,16 @@
 % !TeX root = ../main.tex
 \begin{achievelist}
-    \item Wei ZY, Tang YP, Zhao WH, et al. Rapid development technique for drip irrigation emitters[J]. RP Journal,UK., 2003, 9(2):104~110 (SCI: 000350930600051; EI: 03187452127).
-    \item 魏正英,唐一平,卢秉恒．滴灌管内嵌管状滴头的快速制造方法研究[J]．农业工程学报, 2001,17(2):55~58 (EI:01226526279,01416684777)．
-    \item 
-    \item 
-    \item 
-    \item 
-    \item 
-    \item 
-    \item 
-    \item 
-    \item 
-    \item 
-    \item 
-    \item 
-    \item 
-    \item 
-    \item 
-    \item 
-    \item 
-    \item 
-    \item 
-    \item 
-    \item 
-    \item 
-    % \item 
-    % \item 
-    \item 
+    \item Less is More: Dynamic and Shared Headroom Allocation in
+    PFC-Enabled Datacenter Networks[C]. International Conference on Distributed Computing Systems (ICDCS). (CCF-B录用，导师一作，本人二作).
+    \item Burst can be Harmless: Achieving Line-rate Software Traffic Shap-
+    ing by Inter-flow Batching[C]. IEEE INFOCOM. (CCF-A录用，导师一作，本人三作).
+    \item 多服务队列环境中基于时延的拥塞控制机制和控制装置[P]. 发明专利.
+    (已授权，导师一作，本人二作).
+    \item 一种面向 PFC 交换机的动态净空缓存管理方法及装置[P]. 发明专利. (实
+    质审查，导师一作，本人二作).
+    \item 一种高速低开销流量整形方法及装置[P]. 发明专利. (实质审查，导师一
+    作，本人三作).
     
 \end{achievelist}
 
 \vspace{\baselineskip}
-{\color{red} 用于双盲评审的论文，只列出已发表的学术论文的篇名、发表刊物名称，必须隐去各类论文检索号、期号、卷号、页码；专利号；日期等。}
