--- a/Main_Miscellaneous/acknowledegment.tex
+++ b/Main_Miscellaneous/acknowledegment.tex
@@ -1,20 +1,11 @@
 % !TeX root = ../main.tex
-致谢中主要感谢导师和对论文工作有直接贡献和帮助的人士和单位。
 
-一般致谢的内容有：
-\begin{enumerate}[label=（\chinese*）,itemindent=2em]
+研究生三年转瞬即逝，本文的完成也标志着我的研究生生涯的结束。在这三年年的时间里，我的理论知识、专业技能和实践能力都得到了很大的提升，同时对自己现阶段的不足和未来规划也有了更清晰的认知。在这里，我真诚地感谢母校的栽培，感谢研究生期间所有老师、同学和朋友给与我的关心与帮助。
 
-    \item 对指导或协助指导完成论文的导师；
-    \item 对国家科学基金、资助研究工作的奖学金基金、合同单位、资助或支持的企业、组织或个人；
-    \item 对协助完成研究工作和提供便利条件的组织或个人；
-    \item 对在研究工作中提出建议和提供帮助的人；
-    \item 对给予转载和引用权的资料、图片、文献、研究思想和设想的所有者；
-    \item 对其他应感谢的组织和个人。
+从本课题开题到现在论文即将完结，这个过程中有遇到困难时的沮丧，也有取得进展时的欣喜，能够克服所有难题，顺利完成毕业设计，首先要感谢我的指导老师单丹枫老师，单老师渊博的知识、严谨的态度和强大的人格魅力令我钦佩和敬仰。感谢单老师耐心地为我们讲解遇到的问题，给我们传授科研经验，时刻关注我们的科研进展，同时在生活中对我们的关爱和照顾。本论文的完成离不开单老师的帮助，老师教会了我们很多东西， 由衷地感谢单老师的付出。
 
-\end{enumerate}
+同时我要感谢小组内的吴晨、王宙、郑鼎方、胡世豪、蒋林冰等师兄师姐，他们给我传授了很多科研上的经验，为我解答了很多遇到的问题，还有实验室的梁泽宇、孙寅鑫、党一涵、周高升、孙斌等同学，在这个过程中和我一起讨论，帮我解决了很多问题，互相分享喜怒哀乐，彼此成长了很多。
 
-致谢言语应谦虚诚恳，实事求是。字数不超过1000汉字
+还要感谢我的家人，感谢你们给我的关心和支持，你们对我的关爱是我保持进取的不竭动力，你们的健康和快乐是我最大的心愿。
 
-\vspace{\baselineskip}
-{\color{red} 用于双盲评审的论文，此页内容全部隐去。}
-
+最后， 对评审本文的专家和教授表示由衷的感谢。
