--- a/main.tex
+++ b/main.tex
@@ -12,12 +12,12 @@
 %% 选择论文的基本类型
 
 \documentclass[
-    doctor,     % 必选项：   {master, doctor} 此处不区分专业/学术学位，在下面学位类型处区分
+    master,     % 必选项：   {master, doctor} 此处不区分专业/学术学位，在下面学位类型处区分
                 % Mandatory: {master, doctor} No difference between Academic degree and Professional degree,
                 %                             but be careful about arguments in `\degree' and `\subject'
     % english,  % 可选项：   英文正文请选择此项
                 % Optional:  For english main content, It will change some auto-generated matter into English
-    % blind,    % 可选项：   论文用于盲审请选择此项，将隐去致谢页内容(但保留标题)、答辩委员会会议决议页内容(同前)、
+    blind,    % 可选项：   论文用于盲审请选择此项，将隐去致谢页内容(但保留标题)、答辩委员会会议决议页内容(同前)、
                 %            常规评阅人名单页内容(同前)，将隐去题名页、答辩委员会页所有人名，
                 %            注意：如果非自动读取成果数据库，请自行修改 `攻读学位期间取得的研究成果' 内的内容格式
                 % Optional:  For blind review, It will not generate Acknowledgements(Content), Decision of Defense
@@ -36,24 +36,24 @@
 
 % 论文标题（不超过35个字，英文注意大小写规律）
 % Title, Make sure you have an acceptable capitalization
-\title{这是一个不超过三十五个字的名字比较长的关于如何开展XXX的研究}{English Title and English Title and English Title}
+\title{无损网络净空缓存管理策略研究}{Research on Headroom Management Strategy in Lossless Network}
 
 % 学位类型
 % 考虑到专业学位的学位名称的少数特例(如专业型法学硕士不是 Master of Juris 而是 Juris Master)，此处学位类型请按照案例和文件填写
 % 同时为了前向兼容，可选项「A/P」（实际必须正确选择）代表「学术/专业」型学位，默认为学术型
 % Type of your degree, Translate it from documents in `Materials/Requirements/2021/01 中英文题名页示例/英文标准翻译/'
-% \degree[A]{硕士}{Master of Engineering} % 学术型(Academic)硕士请基于 '学术学位名称.txt' 填写
+\degree[A]{硕士}{Master of Engineering} % 学术型(Academic)硕士请基于 '学术学位名称.txt' 填写
 % \degree[P]{工程硕士}{Master of Engineering} % 专业型(Professional)硕士请基于 '专业学位（领域）英文标准翻译.pdf' 填写
 %\degree[A]{博士}{Doctor of Philosophy}  % 学术型(Academic Doc)博士请填写 '{博士}{Philosophy}'
-\degree[P]{工程博士}{Doctor of Engineering} % 专业型(Professional Doc)博士请基于 '专业学位（领域）英文标准翻译.pdf' 填写
+% \degree[P]{工程博士}{Doctor of Engineering} % 专业型(Professional Doc)博士请基于 '专业学位（领域）英文标准翻译.pdf' 填写
 
 % 作者姓名（注意：所有人名英文均为「名在前，姓在后」，如果只有外文名，请在两个参数都填写外文名称）
 % If you have only foreign name, put it as both first and second argument
-\author{郑正正}{Zhengzheng Zheng}
+\author{刘钰琪}{Yuqi Liu}
 
 % 指导老师姓名（注意：同作者姓名）
 % Name of supervisor, It have the same requirments as the author
-\advisor{冯峰}{教授}{Feng Feng}{Prof.}
+\advisor{单丹枫}{副教授}{Danfeng Shan}{Asscociate Prof.}
 
 % 合作指导老师姓名 或 老师团队（合作指导老师指：1.与招生简章中一致的合作导师，2.CSC项目的合作导师）
 %（校方模板要求只能选择一个，都有则显示合作导师）
@@ -64,7 +64,7 @@
 % 学科名称，请基于 '学科（专业）英文标准翻译.pdf' 填写
 % Name of the subject, also get it from that file
 % \subject{航空宇航科学与技术}{Aeronautical and Astronautical Science and Technology}
-\subject{航空工程}{Aeronautical Engineering}
+\subject{计算机科学与技术}{Computer Science and Technology}
 
 % 论文提交日期，不输入参数则默认使用当前日期，如手动指明年月，请在第一个可选参数内填写年份，第二个可选参数填写月份（均为阿拉伯数字）
 % Submission date of this thesis, if you not put it manually, it will use the current time
@@ -82,11 +82,11 @@
 
 % 答辩时间（手动指定）
 % Defence date, input manually
-\defensedate{2021}{06}{22}
+\defensedate{2024}{04}{20}
 
 % 答辩地点（涉密论文请手动设置为「西安交通大学」）
 % Defence location, default value is 「西安交通大学」
-\defenseloc{西安交通大学主楼E座303室}
+\defenseloc{}
 
 % 常规审阅人 要求和答辩委员会委员一样
 % General reviewer list, same requirements as the committee member
@@ -160,7 +160,7 @@
 
 % 主要符号表 修改 Main_Miscellaneous/glossary.tex 中的内容
 % Glossaries Page, Rewrite your content in Main_Miscellaneous/glossary.tex
-\thesisglossarylist
+% \thesisglossarylist
 
 % 正文 使用 \thesisbodybegin & \include & \thesisbodyend 组合导入正文
 \thesisbodybegin
@@ -169,7 +169,7 @@
 \include{Main_Spine/c3}
 \include{Main_Spine/c4}
 \include{Main_Spine/c5}
-\include{Main_Spine/c6}
+% \include{Main_Spine/c6}
 \thesisbodyend
 
 % 致谢 修改 Main_Miscellaneous/acknowledegment.tex 中的内容
@@ -185,15 +185,15 @@
 
 % 附录（有几个附录就导入几个文件（不加.tex后缀）），
 % Appendi(x/ies), argument should not have the .tex suffix
-\thesisappendix{Main_Miscellaneous/appendix_a,
-                Main_Miscellaneous/appendix_b}
+% \thesisappendix{Main_Miscellaneous/appendix_a,
+%                 Main_Miscellaneous/appendix_b}
 
 % 攻读学位期间取得的研究成果
 % 添加 [auto] 参数则读取通过 \addachivementresource 添加的数据库，否则读取 Main_Miscellaneous/achievement.tex 的内容 注意盲审时需要手动修改格式
 % 自动读取的数据库中 若条目含有 AUTHOR+an = {X=highlight} 则第 X 位作者会被加粗
 % Achievement, argument [auto] will load data from database added by \addachivementresource, or the data from Main_Miscellaneous/achievement.tex
-% \thesisachivements
-\thesisachivements[auto]
+\thesisachivements
+% \thesisachivements[auto]
 
 % 答辩委员会决议 修改 Main_Miscellaneous/decision.tex 中的内容
 % Decision, Rewrite your content in Main_Miscellaneous/decision.tex
